username with bug

--- a/src/app/components/inputs/iemail/iemail.component.html
+++ b/src/app/components/inputs/iemail/iemail.component.html
@@ -1,7 +1,7 @@
 <extended-input
-  [labelText]="'Enter Email'"
+  [labelText]="'Email'"
   [inputErrors]="vEmail.errors"
-  [errorKeys]="{touched: '',
+  [errorKeys]="{pristine: '',
                 required: 'Email is required',
                 email: 'Not a valid Email',
                 validEmail: 'Not a valid Email'}"
