--- a/src/app/components/forms/signup/signup.component.html
+++ b/src/app/components/forms/signup/signup.component.html
@@ -1,6 +1,7 @@
 <form (submit)="onSubmit()">
 
   <iemail></iemail>
+  <iusername></iusername>
   <input type="text">
   <button class="btn btn-primary">
     Submit
