username comp ready

--- a/src/app/components/inputs/iemail/iemail.component.html
+++ b/src/app/components/inputs/iemail/iemail.component.html
@@ -4,7 +4,7 @@
   [errorKeys]="{pristine: '',
                 required: 'Email is required',
                 email: 'Not a valid Email',
-                validEmail: 'Not a valid Email'}"
+                invalidEmail: 'Not a valid Email'}"
   [labelCss]="'iemailCss'">
   <input [formControl]="vEmail" [(ngModel)]="uEmail" type="text"/>
 </extended-input>
