--- a/src/app/components/forms/signup/signup.component.html
+++ b/src/app/components/forms/signup/signup.component.html
@@ -2,7 +2,7 @@
 
   <iemail></iemail>
   <iusername></iusername>
-  <input type="text">
+  <ipassword [dual]='true'></ipassword>
   <button class="btn btn-primary">
     Submit
   </button>
