--- a/src/app/components/inputs/extended-input/extended-input.component.html
+++ b/src/app/components/inputs/extended-input/extended-input.component.html
@@ -2,7 +2,7 @@
   <label i18n class="control-label" class={{labelCssClass}}>{{labelText}}
     <ng-content></ng-content>
   </label>
-  <span class="help-block" *ngIf="errorMessage" class={{errorCss}}>
-    {{errorMessage}}
+  <span class="help-block" *ngIf="displayMessage" class={{displayClass}}>
+    {{displayMessage}}
   </span>
 </div>
