--- a/src/app/components/inputs/ipassword/ipassword.component.html
+++ b/src/app/components/inputs/ipassword/ipassword.component.html
@@ -17,6 +17,7 @@
                 required: 'Required',
                 mismatch: 'Passwords do not match!'
               }"
-  [message]="message">
+  [message]="message"
+  [messageClass]="'message'">
   <input [formControl]="vPassword2" [(ngModel)]="uPassword2" type="password"/>
 </extended-input>
