--- a/src/app/components/forms/login/login.component.html
+++ b/src/app/components/forms/login/login.component.html
@@ -1,12 +1,8 @@
 <form (submit)="onSubmit()">
-  <advanceInput [type]="'email'"></advanceInput>
   <advanceInput [type]="'username'"></advanceInput>
-  <advanceInput [type]="'password2'"></advanceInput>
-  <!-- <iemail></iemail>
-  <iusername></iusername>
-  <ipassword [dual]='true'></ipassword> -->
+  <advanceInput [type]="'password'"></advanceInput>
   <button class="btn btn-primary">
-    Signup
+    Login
   </button>
   <span *ngIf="result">{{result}}</span>
 
