--- a/src/app/components/inputs/advanceinput/advanceinput.component.html
+++ b/src/app/components/inputs/advanceinput/advanceinput.component.html
@@ -24,25 +24,26 @@
   <input [formControl]="$username" [(ngModel)]="_username" type="text"/>
 </extended-input>
 
-<extended-input *ngIf='$password2'
+<extended-input *ngIf='$password'
   [labelText]="'Password'"
-  [inputErrors]="$password2.errors"
+  [inputErrors]="$password.errors"
   [errorKeys]="{pristine: '',
                 required: 'Password is required',
                 minlength: 'Password too small',
                 maxlength: 'Password too long',
-                pattern: 'Invalid character used,use(a-z,0-9,A-Z,!,@,#,$,%,^,&,*,(,),_,.)'
+                pattern: 'Invalid character used,use(a-z,0-9,A-Z,!,@,#,$,%,^,&,*,(,),_,.)',
+                passwordPattern: 'Invalid Password'
               }">
-  <input [formControl]="$password2" [(ngModel)]="_password2" type="password"/>
+  <input [formControl]="$password" [(ngModel)]="_password" type="password"/>
 </extended-input>
-<extended-input *ngIf="createMode"
+<extended-input *ngIf="$password2"
   [labelText]="'Re-enter Password'"
-  [inputErrors]="$password.errors"
+  [inputErrors]="$password2.errors"
   [errorKeys]="{pristine: '',
                 required: 'Required',
                 mismatch: 'Passwords do not match!'
               }"
   [message]="message"
   [messageClass]="'pMessage'">
-  <input [formControl]="$password" [(ngModel)]="_password" type="password"/>
+  <input [formControl]="$password2" [(ngModel)]="_password2" type="password"/>
 </extended-input>
