input components fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!-- <input fieldtype="email"> -->
-
-<!-- <iemail></iemail> -->
-
-
+<iemail></iemail>
+<iusername></iusername>
+<ipassword [dual]="'true'"></ipassword>
+<!--
 <signupForm></signupForm>
 <hr>
-<loginForm></loginForm>
+<loginForm></loginForm> -->
