--- a/src/app/components/inputs/ipassword/ipassword.component.html
+++ b/src/app/components/inputs/ipassword/ipassword.component.html
@@ -1,23 +1,23 @@
 <extended-input
   [labelText]="'Password'"
-  [inputErrors]="vPassword.errors"
+  [inputErrors]="$password.errors"
   [errorKeys]="{pristine: '',
                 required: 'Password is required',
                 minlength: 'Password too small',
                 maxlength: 'Password too long',
-                pattern: 'Invalid character used,use(a-z,0-9,A-Z,!,@,#,$,%,^,&,*,(,),_,.)'
+                pattern: 'Invalid character used,use(a-z,0-9,A-Z,!,@,#,$,%,^,&,*,(,),_,.)',
+                passwordPattern: 'Invalid Password'
               }">
-  <input [formControl]="vPassword" [(ngModel)]="uPassword" type="password"/>
+  <input [formControl]="$password" [(ngModel)]="_password" type="password"/>
 </extended-input>
-
-<extended-input *ngIf="createMode"
+<extended-input *ngIf="$password2"
   [labelText]="'Re-enter Password'"
-  [inputErrors]="vPassword2.errors"
+  [inputErrors]="$password2.errors"
   [errorKeys]="{pristine: '',
                 required: 'Required',
                 mismatch: 'Passwords do not match!'
               }"
   [message]="message"
-  [messageClass]="'message'">
-  <input [formControl]="vPassword2" [(ngModel)]="uPassword2" type="password"/>
+  [messageClass]="'pMessage'">
+  <input [formControl]="$password2" [(ngModel)]="_password2" type="password"/>
 </extended-input>
