--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<iemail></iemail>
-<iusername></iusername>
-<ipassword [dual]="'true'"></ipassword>
+<!--<iemail></iemail>
+<iusername></iusername>-->
+<!--<ipassword [dual]="'true'"></ipassword>-->
 <!--
 <signupForm></signupForm>
-<hr>
-<loginForm></loginForm> -->
+<hr>-->
+<!--<loginForm></loginForm> -->
+<signupForm></signupForm>
