--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<iemail></iemail>
+<!-- <iemail></iemail>
 <iusername></iusername>
-<ipassword [dual]="'true'"></ipassword>
-<!--
+<ipassword [dual]="'true'"></ipassword> -->
+
 <signupForm></signupForm>
 <hr>
-<loginForm></loginForm> -->
+<loginForm></loginForm>
