--- a/src/app/components/forms/login/login.component.html
+++ b/src/app/components/forms/login/login.component.html
@@ -1,6 +1,9 @@
 <form (submit)="onSubmit()">
-  <advanceInput [type]="'username'"></advanceInput>
-  <advanceInput [type]="'password'"></advanceInput>
+  <iemail></iemail>
+  <iemail></iemail>
+
+  <ipassword></ipassword>
+  <iemail></iemail>
   <button class="btn btn-primary">
     Login
   </button>
