--- a/src/app/components/forms/signup/signup.component.html
+++ b/src/app/components/forms/signup/signup.component.html
@@ -1,10 +1,7 @@
 <form (submit)="onSubmit()">
-  <advanceInput [type]="'email'"></advanceInput>
-  <advanceInput [type]="'username'"></advanceInput>
-  <advanceInput [type]="'password2'"></advanceInput>
-  <!-- <iemail></iemail>
+  <iemail></iemail>
   <iusername></iusername>
-  <ipassword [dual]='true'></ipassword> -->
+  <ipassword [dual]='true'></ipassword>
   <button class="btn btn-primary">
     Signup
   </button>
