multi input enabled

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <iusername></iusername>
 <ipassword [dual]="'true'"></ipassword> -->
 
-<signupForm></signupForm>
+<!-- <signupForm></signupForm> -->
 <hr>
-<loginForm></loginForm>
+<multiForm></multiForm>
+<!-- <loginForm></loginForm> -->
