switched to scss

--- a/src/app/components/forms/MultiFields/multi.component.html
+++ b/src/app/components/forms/MultiFields/multi.component.html
@@ -1,3 +1,6 @@
+<div class="refForm">
+<h2 class="head">This is a reference component for creating forms in future!</h2>
+
 <form (submit)="onSubmit()">
   <iemail></iemail>
   <iusername></iusername>
@@ -11,3 +14,4 @@
   <span *ngIf="result">{{result}}</span>
 
 </form>
+</div>
